{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 36,
  "lineage": "0ebb4069-b1cc-2f19-8334-bbcc40f87cca",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061d1e36579e045f4",
            "arn": "arn:aws:ec2:us-west-2:835665967244:elastic-ip/eipalloc-061d1e36579e045f4",
            "association_id": "eipassoc-0661b3940ef83338c",
            "domain": "vpc",
            "id": "eipalloc-061d1e36579e045f4",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0a37f2577059e0cd5",
            "private_dns": "ip-10-0-1-159.us-west-2.compute.internal",
            "private_ip": "10.0.1.159",
            "public_dns": "ec2-52-36-134-223.us-west-2.compute.amazonaws.com",
            "public_ip": "52.36.134.223",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lesson-7-vpc-nat-eip"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835665967244:internet-gateway/igw-01067806a7cde471b",
            "id": "igw-01067806a7cde471b",
            "owner_id": "835665967244",
            "tags": {
              "Name": "lesson-7-vpc-igw"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-igw"
            },
            "vpc_id": "vpc-0923220810720c844"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061d1e36579e045f4",
            "association_id": "eipassoc-0661b3940ef83338c",
            "connectivity_type": "public",
            "id": "nat-02efca78ff763c90d",
            "network_interface_id": "eni-0a37f2577059e0cd5",
            "private_ip": "10.0.1.159",
            "public_ip": "52.36.134.223",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fce3c1bbfae8e4b7",
            "tags": {
              "Name": "lesson-7-vpc-nat-gw"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835665967244:route-table/rtb-01e7bef6604bb3d42",
            "id": "rtb-01e7bef6604bb3d42",
            "owner_id": "835665967244",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02efca78ff763c90d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-7-vpc-private-rt"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0923220810720c844"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835665967244:route-table/rtb-0ece44624ce7819ab",
            "id": "rtb-0ece44624ce7819ab",
            "owner_id": "835665967244",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01067806a7cde471b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-7-vpc-public-rt"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0923220810720c844"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b59a030fd2db4a7",
            "route_table_id": "rtb-01e7bef6604bb3d42",
            "subnet_id": "subnet-0f0860f884821a24a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04162faa7ba67ce60",
            "route_table_id": "rtb-01e7bef6604bb3d42",
            "subnet_id": "subnet-0dffc794bec293b42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048dfd62ab81e1932",
            "route_table_id": "rtb-01e7bef6604bb3d42",
            "subnet_id": "subnet-0e1094363f2a165b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3cd40e91783652c",
            "route_table_id": "rtb-0ece44624ce7819ab",
            "subnet_id": "subnet-0fce3c1bbfae8e4b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060dca2ab11631667",
            "route_table_id": "rtb-0ece44624ce7819ab",
            "subnet_id": "subnet-0edf96e7db53616bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2c052ccc1116892",
            "route_table_id": "rtb-0ece44624ce7819ab",
            "subnet_id": "subnet-055b5aa4615ac7b3c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835665967244:subnet/subnet-0f0860f884821a24a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0860f884821a24a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835665967244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-7-vpc-private-us-west-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-private-us-west-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0923220810720c844"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835665967244:subnet/subnet-0dffc794bec293b42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dffc794bec293b42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835665967244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-7-vpc-private-us-west-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-private-us-west-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0923220810720c844"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835665967244:subnet/subnet-0e1094363f2a165b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1094363f2a165b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835665967244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-7-vpc-private-us-west-2c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-private-us-west-2c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0923220810720c844"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835665967244:subnet/subnet-0fce3c1bbfae8e4b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fce3c1bbfae8e4b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "835665967244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-7-vpc-public-us-west-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-public-us-west-2a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0923220810720c844"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835665967244:subnet/subnet-0edf96e7db53616bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edf96e7db53616bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "835665967244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-7-vpc-public-us-west-2b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-public-us-west-2b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0923220810720c844"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835665967244:subnet/subnet-055b5aa4615ac7b3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055b5aa4615ac7b3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "835665967244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-7-vpc-public-us-west-2c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-public-us-west-2c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0923220810720c844"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:835665967244:vpc/vpc-0923220810720c844",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09c5b81e51b6b3a6c",
            "default_route_table_id": "rtb-0d9956892b70a8b13",
            "default_security_group_id": "sg-07ce8d03825fa920c",
            "dhcp_options_id": "dopt-02aa468b0cd74bf29",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0923220810720c844",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d9956892b70a8b13",
            "owner_id": "835665967244",
            "tags": {
              "Name": "lesson-7-vpc"
            },
            "tags_all": {
              "Name": "lesson-7-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}